--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -10,8 +10,8 @@
             <p class="card-text" th:text="${article.content}"></p>
             <a th:href="@{/article/list}" class="btn btn-primary">목록</a>
             <a th:href="@{|/article/modify/${article.id}|}" class="btn btn-dark">수정</a>
+            <a th:href="@{|/article/delete/${article.id}|}" class="btn btn-danger">삭제</a>
         </div>
     </div>
-
 </div>
 </html>
