--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -18,7 +18,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/user/login}">login</a>
+                    <a class="nav-link active" sec:authorize="isAnonymous()" aria-current="page" th:href="@{/user/login}">login</a>
+                    <a class="nav-link active" sec:authorize="isAuthenticated()" aria-current="page" th:href="@{/user/logout}">logout</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/user/register}">register</a>
