--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -8,9 +8,9 @@
         <div class="card-body">
             <h5 class="card-title" th:text="${article.title}"></h5>
             <p class="card-text" th:text="${article.content}"></p>
-            <a th:href="@{/article/list}" class="btn btn-primary">목록</a>
-            <a th:href="@{|/article/modify/${article.id}|}" class="btn btn-dark">수정</a>
-            <a th:href="@{|/article/delete/${article.id}|}" class="btn btn-danger">삭제</a>
+            <a th:href="@{/article/list}"  class="btn btn-primary">목록</a>
+            <a th:href="@{|/article/modify/${article.id}|}" th:if="${article.author != null and #authentication.getPrincipal().getUsername() == article.author.username}" sec:authorize="isAuthenticated()" class="btn btn-dark">수정</a>
+            <a th:href="@{|/article/delete/${article.id}|}" th:if="${article.author != null and #authentication.getPrincipal().getUsername() == article.author.username}" sec:authorize="isAuthenticated()" class="btn btn-danger">삭제</a>
         </div>
     </div>
 </div>
