--- a/src/main/resources/templates/user_login.html
+++ b/src/main/resources/templates/user_login.html
@@ -1,13 +1,13 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content">
-    <h1> articleCreate</h1>
+    <h1 class="ms-3"> UserLogin</h1>
     <form th:action="@{/user/login}" method="post" class="form">
         <label for="username" class="label">username</label>
         <input type="text" class="form-control" name="username" id="username">
         <br>
         <label for="password" class="label">password</label>
         <input type="password" class="form-control" name="password" id="password">
-        <button type="submit" class="btn btn-success">login</button>
+        <button type="submit" class="btn btn-success ms-3 mt-3">login</button>
     </form>
 
 </div>
