--- a/src/main/resources/templates/article_list.html
+++ b/src/main/resources/templates/article_list.html
@@ -17,7 +17,7 @@
         <tr th:each="article, loop:${articleList}">
             <td class="ps-3" th:text="${loop.count}"></td>
             <td><a th:href="@{|/article/detail/${article.id}|}" th:text="${article.title}"></a></td>
-            <td th:text="${article.createDate}"></td>
+            <td th:text="${#temporals.format(article.createDate, 'yyyy-MM-dd')}"></td>
         </tr>
         </tbody>
     </table>
