--- a/src/main/resources/templates/article_modifyForm.html
+++ b/src/main/resources/templates/article_modifyForm.html
@@ -1,7 +1,7 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content">
-    <h1 class="ms-3"> ArticleModify</h1>
-    <form th:action="@{|/article/modify/${article.id}|}" method="post" class="form">
+    <h1 class="ms-3 "> ArticleModify</h1>
+    <form th:action="@{|/article/modify/${article.id}|}" method="post" class="form ps-2 pb-2">
         <label for="title" class="label">title</label>
         <input type="text" class="form-control" name="title" id="title">
         <br>
