--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,7 +22,7 @@
                     <a class="nav-link active" sec:authorize="isAuthenticated()" aria-current="page" th:href="@{/user/logout}">logout</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/user/register}">register</a>
+                    <a class="nav-link active" th:href="@{/user/register}">register</a>
                 </li>
             </ul>
         </div>
