--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -9,8 +9,12 @@
             <h5 class="card-title" th:text="${article.title}"></h5>
             <p class="card-text" th:text="${article.content}"></p>
 
-            <p class="card-text"><small class="text-body-secondary" th:text="${#temporals.format(article.createDate, 'yyyy-MM-dd HH:mm')}"></small></p>
-            <p class="card-text"><small class="text-body-secondary" th:text="${#temporals.format(article.modifyDate, 'yyyy-MM-dd HH:mm')}"></small></p>
+            <p class="card-text"><small class="text-body-secondary"
+                                        th:text="${#temporals.format(article.createDate, 'yyyy-MM-dd HH:mm')}"></small>
+            </p>
+            <p class="card-text"><small class="text-body-secondary"
+                                        th:text="${#temporals.format(article.modifyDate, 'yyyy-MM-dd HH:mm')}"></small>
+            </p>
         </div>
         <div class="mb-3">
             <a th:href="@{/article/list}" class="btn btn-primary ms-3">목록</a>
